fixed overflow on "work" section

--- a/css/grid.css
+++ b/css/grid.css
@@ -343,11 +343,11 @@
 }
 
 .unit-push-m-1-3 {
-  width: 33.3333%;
+  width: 33%;
 }
 
 .unit-push-m-1-3-right {
-  width: 33.3333%;
+  width: 33%;
 }
 
 .unit-pull-m-1-3 {
