--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,11 @@ ul{
 }
 
 a { 
-	color: #009CA6;
+	color: #ffffff;
+}
+
+a:hover { 
+	color: #CFB454;
 }
 
 .masthead {
@@ -122,11 +126,7 @@ main {
 
 .work {
 	width: 100%;
-	padding-top: 15rem;
-	padding-bottom:45rem;
-	
-	margin-top:10rem;
-	margin-bottom:10rem;
+	overflow: hidden;
 	background-color: #666;
 	
 
@@ -135,14 +135,10 @@ main {
 .about {
 	width: 100%;
 	background-color:rgba(136,136,136,1);
-	margin-top: 0rem;
-	padding-top:5rem;
 }
 
 .contact {
-	
-	background-color: #C5C5C5;
-	padding-top:5rem;
+	background-color:#CFB454
 	margin-top:0
 }
 
@@ -160,6 +156,7 @@ main {
 	display: none;
 }
 
+
 @media only screen and (min-width: 25em) {
 	.nav li{
 		display: inline-block
@@ -173,7 +170,7 @@ main {
 
 	.unit-push-s-1-2 {
 	margin-top: -14%; 
-	padding-left:24.5%
+	padding-left:25.1%
 
 	}
 	
@@ -213,12 +210,12 @@ main {
 	
 	.unit-push-m-1-3 {
 	margin-top:-9.5%;
-	padding-left:16.5%;
+	padding-left:16.6%;
 	}
 	
 	.unit-push-m-1-3-right {
 	margin-top:-9.5%;
-	padding-left:.3%;
+
 	}
 	
 	.unit-m-1-3-top {
