--- a/css/typography.css
+++ b/css/typography.css
@@ -29,11 +29,12 @@ html {
 
 }
 
-h1, h3, h4, h5, h6,
+h1, h2, h3, h4, h5, h6,
 p, ul, ol, dl, dd, figure,
 blockquote, details, hr,
 fieldset, pre, table {
   margin: 0 0 1.5rem;
+  padding: 0.5rem 0.5rem;
 }
 
 .yotta {
